--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,15 @@ datasets
 peft
 Pillow
 tqdm
+
+
+
+
+
+
+!pip install torch==2.2.1+cu118 torchvision==0.17.1+cu118 --index-url https://download.pytorch.org/whl/cu118
+!pip install diffusers==0.14.0
+!pip install transformers==4.25.1
+!pip install accelerate==0.15.0
+!pip install safetensors==0.2.8
+!pip install peft==0.3.0
